--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -47,10 +47,11 @@ test:
 
 about:
   home: https://CRAN.R-project.org/package=pcaPP
-  license: GPL (>= 3)
+  license: GPL-3.0-or-later
   summary: Provides functions for robust PCA by projection pursuit. The methods are described in Croux et al. (2006) <doi:10.2139/ssrn.968376>, Croux et al. (2013) <doi:10.1080/00401706.2012.727746>, Todorov and Filzmoser (2013) <doi:10.1007/978-3-642-33042-1_31>.
   license_family: GPL3
-  license_file: {{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3
+  license_file:
+    - {{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3
 
 extra:
   recipe-maintainers:
